--- a/movie/index.html
+++ b/movie/index.html
@@ -19,7 +19,7 @@
               >
         </form>
     </header>
-    <main id="main"></main>
+    <main id="main">movie</main>
     <!-- 尽快看到页面 -->
     <!-- script 会阻碍html下载 越大，看到页面等越久-->
     <script src="./script.js">
