--- a/js/es6/promise/1.html
+++ b/js/es6/promise/1.html
@@ -7,21 +7,20 @@
 </head>
 <body>
     <script>
-        //异步任务
-        setTimeout(()=>{
-            console.log('2222');
-        },10)
-        //同步任务
-        //进程 CPU 分配资源的最小单元
-        //线程 执行代码的最小单元
-        //应用程序那么多，CPU怎么干的过来 轮询
-        //漫画 和动画片 1秒钟 20帧以上
-        //一个单位时间可以执行完，同步代码
-        var a=1;
-        console.log('1111');
-        for(let i=0;i<100;i++){
-            console.log('222220');
+        // 异步任务：设置定时器（10ms后执行回调）
+        setTimeout(() => {
+            console.log('2222'); // 最终输出（因事件循环机制后执行）
+        }, 10)
+
+        // 同步任务（立即执行）
+        var a = 1;
+        console.log('1111'); // 第一个输出
+
+        // 同步循环（阻塞执行，直到完成）
+        for(let i=0; i<100; i++) {
+            console.log('222220'); // 第二个到第101个输出（循环内的同步代码）
         }
+        // 总结：同步代码优先执行，异步任务（如setTimeout）进入事件队列等待执行
     </script>
 </body>
 </html>
