css动画与页面性能

--- a/css/kiss/bfc/2.html
+++ b/css/kiss/bfc/2.html
@@ -7,8 +7,8 @@
   <style>
   .container {
     background-color:green;
-    /* width: 400px; */
-    overflow: hidden;/*BFC*/
+    width: 400px;
+    overflow: hidden;  
   }
   .box {
     margin: 100px;
