--- a/课后学js/call.apply.bind指向/call.html
+++ b/课后学js/call.apply.bind指向/call.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <script>
+        'use strict'
         const obj={
             uname:'SY',
             age:20
-        }
+        };
         function fn(x,y){
             console.log(this);
             console.log(x+y);
