--- a/js/singleton/2.html
+++ b/js/singleton/2.html
@@ -33,7 +33,7 @@ const Storage = (function() {
 const storage1 = new Storage();
 const storage2 = new Storage();
 console.log(storage1 === storage2);
-storage1.setItem('name', '刘福州');
+storage1.setItem('name', '刘南昌');
 console.log(storage1.getItem('name'));
 console.log(storage2.getItem('name'));
 </script>  
