--- a/html5/canvas/index.html
+++ b/html5/canvas/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <style>
         #demo{
-            border: 1px solid red;
+            border: 1px solid red;/* 画布边框 */
+
         }
 
     </style>
