--- a/interview/react/fiber/1.html
+++ b/interview/react/fiber/1.html
@@ -20,7 +20,7 @@
     <p>
         更重要更优先的 用户交互<br/>
         用于动画<br/>
-        不是一直执行的，1s 执行60次<br/>
+        不是一直执行的,1s 执行60次<br/>
         16.67ms
     </p>
     <!-- 进度条元素 -->
